RESOLVED FIXED214617
REGRESSION (r258871): Shift + click to extend selection loses currently selected text
https://bugs.webkit.org/show_bug.cgi?id=214617
Summary REGRESSION (r258871): Shift + click to extend selection loses currently selec...
Wenson Hsieh
Reported 2020-07-21 15:37:12 PDT
Attachments
For EWS (9.59 KB, patch)
2020-07-21 16:11 PDT, Wenson Hsieh
no flags
For EWS (9.58 KB, patch)
2020-07-21 16:11 PDT, Wenson Hsieh
no flags
For EWS (9.50 KB, patch)
2020-07-21 16:18 PDT, Wenson Hsieh
megan_gardner: review+
Patch (17.95 KB, patch)
2020-07-21 17:22 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-07-21 16:11:00 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2020-07-21 16:11:54 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 3 2020-07-21 16:18:15 PDT
Wenson Hsieh
Comment 4 2020-07-21 17:22:45 PDT
EWS
Comment 5 2020-07-21 19:47:33 PDT
Committed r264690: <https://trac.webkit.org/changeset/264690> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404885 [details].
Note You need to log in before you can comment on or make changes to this bug.